<resources>
    <string name="app_name">AND_FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="wishlist">Wishlist</string>
    <string name="personal_info">Personal Info</string>
    <string name="prompt_full_name">Name </string>
    <string name="prompt_email">E-Mail </string>
    <string name="change_image">Change Image</string>
    <string name="update_profile">Update Profile</string>
    <string name="prompt_contact">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="search_title">Search Result </string>
    <string name="flight_details_title">Flight Details </string>
    <string name="history_title">History </string>
    <string name="notifications_title">Notifications </string>
    <string name="wishlist_title">Wishist </string>
    <string name="edit" />
    <string name="content_description_search" />
    <string name="content_description_more"> </string>
    <string name="profile_id_card">ID Card </string>
    <string name="profile_date_birth">Date of Birth </string>
    <string name="profile_address">Address </string>
    <string name="profile_gender">Gender </string>
    <string name="profile_username">Username </string>
    <string name="todo">TODO</string>
    <string name="in_230">IN-230</string>
    <string name="jkt_jakarta">JKT (Jakarta)</string>
    <string name="ringkasan_e_ticket_anda29_10_2022_17_40_air_asia_584_jkt_jpn_kvlvae_jumlah_2_penumpang_telah_berhasil_dilakukan_hubungi_cskami_jika_membutuhkan_bantuan">Ringkasan E-ticket anda29-10-2022/17:40/ Air Asia 584 /JKT-JPN /KVLVAE.Jumlah : 2 Penumpang.Telah berhasil dilakukan, hubungi CSkami jika membutuhkan bantuan.</string>
    <string name="fd_departure_date">Departure Date</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sr_check">Check</string>
</resources>