<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/WidthParentAndHeightContent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/WidthParentAndHeightContent">

        <TextView
            android:id="@+id/tv_personalInfo"
            style="@style/WrapContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/personal_info"
            android:layout_marginTop="30dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/base"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_personalInfo"
            android:src="@drawable/ic_photo_profile"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_change_image"
            style="@style/Button"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            android:text="@string/change_image"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_id_card"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/profile_id_card"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_image"
            android:paddingHorizontal="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_id_card"
                style="@style/WidthParentAndHeightContent"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_full_name"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_id_card"
            android:paddingHorizontal="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_fullname"
                style="@style/WidthParentAndHeightContent"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/profile_gender"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_profile_full_name"
            android:paddingHorizontal="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_gender"
                style="@style/WidthParentAndHeightContent"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_date_birth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/profile_date_birth"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_profile_gender"
            android:paddingHorizontal="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_date_birth"
                style="@style/WidthParentAndHeightContent"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/profile_address"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_profile_date_birth"
            android:paddingHorizontal="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_address"
                style="@style/WidthParentAndHeightContent"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/prompt_email"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_profile_address"
            android:paddingHorizontal="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_email"
                style="@style/WidthParentAndHeightContent"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/profile_username"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_profile_email"
            android:paddingHorizontal="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_username"
                style="@style/WidthParentAndHeightContent"
                android:inputType="phone"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_profile_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/prompt_password"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_profile_username"
            android:paddingHorizontal="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_profile_password"
                style="@style/WidthParentAndHeightContent"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/btn_profile_update"
            style="@style/Button"
            android:text="@string/update_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_profile_password"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>